# na-web-scraping

./: .dockerignore  .gitignore  README.md  compose.infra.yaml  compose.temporal.yaml  compose.windmill.yaml  compose.yaml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: build-selective.yml  contracts-gen.yml  deploy.yml  reversibility.yml
cmd/acquire/: main.go
contracts/: README.md  buf.gen.yaml  buf.yaml
contracts/proto/: artifact.proto  command.proto  http_exchange.proto  result.proto
core/: README.md
core/browser-fetcher-ts/: package-lock.json  package.json  tsconfig.json
core/browser-fetcher-ts/src/: BrowserFetcher.ts  acquire.ts  storage.ts  validate.ts
core/http-fetcher-go/: fetcher.go
core/http-fetcher-py/: pyproject.toml
core/http-fetcher-py/src/http_fetcher_py/: __init__.py  acquire.py  fetcher.py  shared.py  storage.py
core/shared/: shared.go
docker/control-api/: Dockerfile
docker/lake/: Dockerfile  init_lake.py  zones.json
docker/windmill/: Caddyfile
docker/windmill-browser/: Dockerfile
docker/workflow-builder/: Dockerfile  default.conf
docker/workflow-worker/: Dockerfile
docs/: 00-hub.md  01-contrats-modele-donnees.md  02-pilotage-distribution.md  03-session-reseau.md  04-moteur-navigation.md  05-protections-reaction.md  06-validation-artefacts.md  07-persistance-securite-exploitation.md  08-stack-techno.md  etapes.md  strategie-anti-bot.md  structure-projet.md  technologies-referentiel.xlsx  technologies.md  technologies.xlsx
docs/adr/: 0001-moteur-pilotage-temporal.md
docs/architecture/: 00-hub.md  01-contrats-modele-donnees.md  02-pilotage-distribution.md  03-session-reseau.md  04-moteur-navigation.md  05-protections-reaction.md  06-validation-artefacts.md  07-persistance-securite-exploitation.md
docs/audit-captcha/: captcha-audit-master.csv  captcha-audit-raw.json  inventaire-audit-captcha.md  scraping-collecte-autorisee.md
orchestration/temporal/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
orchestration/temporal/activities/browser-activity-ts/: activity.ts
orchestration/temporal/activities/http-activity-go/: activity.go
orchestration/temporal/activities/http-activity-py/: pyproject.toml
orchestration/temporal/activities/http-activity-py/src/acquire_activity_py/: __init__.py  activity.py
orchestration/temporal/orchestrator/: orchestrator.go
orchestration/temporal/starter/: main.go
orchestration/temporal/worker-bootstrap/: main.go
orchestration/temporal/worker-bootstrap-py/: pyproject.toml
orchestration/temporal/worker-bootstrap-py/src/acquisition_worker_py/: __init__.py  __main__.py  worker.py
orchestration/temporal/worker-bootstrap-ts/: worker.ts
orchestration/temporal/workflows-go/: workflow.go
platform/acquire/: acquire.go
platform/control-api/: main.go
platform/control-api/directorch/: directorch.go
platform/control-api/server/: server.go
platform/storage/: local.go  s3.go  sink.go  store.go
windmill/: wmill-lock.yaml
windmill/u/admin/: hello.py  hello.script.yaml
windmill/u/admin/acquisition.flow/: acquire_cascade.inline_script.py  attempt.inline_script.py  finalize.inline_script.py  flow.yaml  plan.inline_script.py  validate.inline_script.py
windmill/u/admin/batch_sieve.flow/: flow.yaml  partition.inline_script.py  prep.inline_script.py
windmill/u/admin/crawl.flow/: crawl_site.inline_script.py  flow.yaml  prepare.inline_script.py  seeds.inline_script.py
windmill/u/admin/hello_flow.flow/: a.inline_script.py  b.inline_script.py  flow.yaml
