[project]
name = "web-scraping"
version = "0.0.0"
description = "Plateforme d'acquisition de contenu web (pages + fichiers) — artefacts bruts vers SeaweedFS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_scraping"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.pytest.ini_options]
testpaths = ["tests"]
